# bme280pi

./: .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  coverage.yml  publish-to-test-pypi.yml  publish_to_pypi.yml  python-app.yml
bme280pi/: __init__.py  physics.py  raspberry_pi_version.py  readout.py  sensor.py
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
test/: physics.py  raspberry_pi_version.py  readout.py  sensor.py
tests/: test_physics.py  test_raspberry_pi_version  test_raspberry_pi_version.py  test_readout.py  test_sensor.py
